SET(Boost_USE_STATIC_LIBS OFF)
SET(Boost_USE_STATIC_RUNTIME OFF)
FIND_PACKAGE(Boost REQUIRED COMPONENTS python)
FIND_PACKAGE(PythonLibs)

INCLUDE_DIRECTORIES("${Boost_INCLUDE_DIRS}" "${PYTHON_INCLUDE_PATH}")

ADD_LIBRARY(_stateline SHARED module.cpp)

SET_TARGET_PROPERTIES(_stateline PROPERTIES
  PREFIX ""
  LIBRARY_OUTPUT_DIRECTORY ${STATELINE_BINARY_DIR})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
TARGET_LINK_LIBRARIES(_stateline ${Boost_LIBRARIES} ${PYTHON_LIBRARIES}
  statelineserver statelineclient)
FILE(COPY stateline DESTINATION ${STATELINE_BINARY_DIR})
