SET(PythonLibs_DIR "/usr/include/python3.4m")
FIND_PACKAGE(PythonLibs 3.4)

IF(NOT ${PYTHONLIBS_FOUND})
  #SET(PYTHON_INCLUDE_DIR "/usr/include/python3.3m")
  SET(PythonLibs_DIR "/usr/include/python3.3m")
  FIND_PACKAGE(PythonLibs 3.3 REQUIRED)
ENDIF(NOT ${PYTHONLIBS_FOUND})

INCLUDE_DIRECTORIES("${Boost_INCLUDE_DIRS}" "${PYTHON_INCLUDE_PATH}")

ADD_LIBRARY(_stateline SHARED cpp/module.cpp)

SET_TARGET_PROPERTIES(_stateline PROPERTIES
  PREFIX ""
  LIBRARY_OUTPUT_DIRECTORY ${STATELINE_BINARY_DIR})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
TARGET_LINK_LIBRARIES(_stateline ${Boost_LIBRARIES} ${PYTHON_LIBRARIES}
  statelineserver statelineclient)

EXECUTE_PROCESS(COMMAND python -c
  "from distutils.sysconfig import get_python_lib; print(get_python_lib())"
  OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE
)

MESSAGE(STATUS "Installing shared lib to ${PYTHON_SITE_PACKAGES}")

INSTALL(TARGETS _stateline LIBRARY DESTINATION ${PYTHON_SITE_PACKAGES})
