# Copyright (c) 2014, NICTA. 
# Affero General Public License version 3 or later
# See the COPYRIGHT file.

# Authors: Lachlan McCalman
# Date: 2014 

ADD_LIBRARY(db db.cpp)

#ADD_EXECUTABLE ( test-db testdb.cpp )
#TARGET_LINK_LIBRARIES ( test-db db ${obsidianBaseLibraries})
#REGISTER_UNIT_TESTS( test-db )
